Tutedude_Assignment/K8_Assignment/k8s/backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    desc: app-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: docker.io/soumyadeep74/k8s-backend:latest
          ports:
            - containerPort: 5000
