Tutedude_Assignment/K8_Assignment/k8s/frontend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    desc: app-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: docker.io/soumyadeep74/k8s-frontend:latest
        ports:
        - containerPort: 3000
